--- a/src/components/movieCard/style.scss
+++ b/src/components/movieCard/style.scss
@@ -41,7 +41,7 @@
             width: 40px;
             height: 40px;
             position: relative;
-            top: 30px;
+            top: 50px;
             background-color: white;
             flex-shrink: 0;
             @include md {
@@ -50,8 +50,10 @@
             }
         }
         .genres {
-            display: none;
+            display: flex;
+            flex-wrap: wrap;
             position: relative;
+          padding-left: 100px;
             @include md {
                 display: flex;
                 flex-flow: wrap;
